# ai-first-web-client

./: .gitignore  .npmignore  .railway-trigger  .railwayignore  CLAUDE.md  CONTRIBUTING.md  DATA_STORAGE_COMPLIANCE_REPORT.md  DMCA_REGISTRATION_GUIDE.md  LEGAL_COMPLIANCE_SUMMARY.md  LICENSE  PRIVACY_POLICY.md  README.md  SESSION_SECURITY_AUDIT.md  SETUP.md  TERMS_OF_SERVICE.md  nixpacks.toml  package-lock.json  package.json  railway.json  railway.toml  test-limited-history.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
clients/python/: README.md  pyproject.toml
clients/python/tests/: __init__.py  test_client.py
clients/python/unbrowser/: __init__.py  client.py  types.py
docs/: API_DOCUMENTATION_DISCOVERY_PLAN.md  API_LEARNING_PLAN.md  ARCHITECTURE.md  BACKLOG.md  CAPABILITY_GAPS_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_FEATURES_SUMMARY.md  COMPETITIVE_GAP_RESOLUTION.md  COMPOSIO_INTEGRATION_ANALYSIS.md  COMPOSIO_NEXT_STEPS.md  DEDUPLICATION_PLAN.md  DOCUMENTATION_AUDIT_2025-12-25.md  DYNAMIC_HANDLER_SYSTEM.md  FEAT-001-IMPLEMENTATION-SUMMARY.md  FEAT-002-IMPLEMENTATION-SUMMARY.md  FEAT-003-IMPLEMENTATION-SUMMARY.md  FEAT-004-IMPLEMENTATION-SUMMARY.md  FEAT-005-IMPLEMENTATION-SUMMARY.md  FEAT-006-IMPLEMENTATION-SUMMARY.md  FILE_UPLOAD_SUPPORT.md  FLIGHT_DEAL_FINDER_POC.md  FORM_AUTOMATION_IMPLEMENTATION.md  FORM_PROTOCOL_COVERAGE.md  GAP-011-IMPLEMENTATION-SUMMARY.md  GETTING_STARTED.md  GO_TO_MARKET.md  GRAPHQL_FORM_SUPPORT.md  HOSTED_ALPHA_CHECKLIST.md  HUMAN_VERIFICATION_PATTERNS.md  JOB_SCRAPER_ANALYSIS.md  JSON_RPC_SUPPORT.md  LLM_ONBOARDING_SPEC.md  MCP_TOOLS_API.md  MOVEAHEAD_INTEGRATION_PLAN.md  MULTI_DOMAIN_LOGIN_REUSE.md  MULTI_INTERFACE_STRATEGY.md  OAUTH_FLOW_SUPPORT.md  ORIGINAL_CHAT.md  PHASE2_GAP_ANALYSIS.md  PHASE2_REMEDIATION_SUMMARY.md  (+24 more)
examples/: 13-schema-validation.mjs  14-pattern-health-monitoring.mjs  15-websocket-patterns.mjs  README.md  api-change-detection.ts  api-fuzzing.ts  article-extraction.ts  company-research.ts  content-validation-suite.ts  e2e-api-testing.ts  (+6 more)
(+343 files in other folders)
